// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StandardField рендерится корректно 1`] = `
<div
  className="n2o-form-group form-group test"
  style={
    Object {
      "display": "block",
    }
  }
>
  <label
    className="n2o-field-label myLabelClass n2o-label "
    style={
      Object {
        "display": "block",
        "flex": undefined,
        "width": undefined,
      }
    }
  >
    Мое поле
    <span
      className="n2o-field-label-required"
    >
      *
    </span>
  </label>
  <div
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="control-container"
    >
      <span
        style={
          Object {
            "marginLeft": 5,
          }
        }
      >
        км
      </span>
      <div />
    </div>
    <div
      style={
        Object {
          "fontSize": "0.8em",
        }
      }
    >
      Введите значение
    </div>
    <div
      className="n2o-validation-message"
    />
  </div>
</div>
`;

exports[`StandardField рендерится корректно c toolbar 1`] = `
<div
  className="n2o-form-group form-group test"
  style={
    Object {
      "display": "block",
    }
  }
>
  <label
    className="n2o-field-label myLabelClass n2o-label "
    style={
      Object {
        "display": "block",
        "flex": undefined,
        "width": undefined,
      }
    }
  >
    Мое поле
    <span
      className="n2o-field-label-required"
    >
      *
    </span>
  </label>
  <div
    style={
      Object {
        "width": "auto",
      }
    }
  >
    <div
      className="control-container control-container_with-toolbar"
    >
      <div
        className="buttons-toolbar n2o-page-actions__form-toolbar btn-toolbar"
        onClick={[Function]}
        role="toolbar"
      >
        <div
          className="btn-group"
          role="group"
        />
      </div>
      <span
        style={
          Object {
            "marginLeft": 5,
          }
        }
      >
        км
      </span>
      <div />
    </div>
    <div
      style={
        Object {
          "fontSize": "0.8em",
        }
      }
    >
      Введите значение
    </div>
    <div
      className="n2o-validation-message"
    />
  </div>
</div>
`;
